[tool.poetry]
name = "ghstack"
version = "0.4.1"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
description = "Stack diff support for GitHub"
readme = "README.md"
repository = "https://github.com/ezyang/ghstack"
include = ["ghstack/py.typed"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
ghstack = "ghstack.__main__:main"

[tool.poetry.dependencies]
aiohttp = "^3"
dataclasses = { version = "^0.8", python = "<3.7" }
importlib-metadata = "^3"
python = "^3.6"
requests = "^2"
typing-extensions = "^3"

[tool.poetry.dev-dependencies]
flake8 = "^3"
graphql-core = "^3"
hypothesis = "^6"
isort = "^5"
mypy = "^0.800"
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
