[tool.poetry]
name = "ghstack"
version = "0.9.0"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
description = "Stack diff support for GitHub"
readme = "README.md"
repository = "https://github.com/ezyang/ghstack"
include = ["ghstack/py.typed"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
ghstack = "ghstack.cli:main"

[tool.poetry.dependencies]
aiohttp = "^3"
importlib-metadata = { version = ">=1.4", python = "<3.8" }
python = "^3.8.1"
requests = "^2"
typing-extensions = ">=3 <5"
click = "^8"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6"
graphql-core = "^3"
hypothesis = "^6"
mypy = "^1"
pytest = "^7"
usort = "^1"
ufmt = "^2"
lintrunner = "^0.11.0"
types-requests = "^2.31.0.10"
pytest-xdist = "^3.5.0"
expecttest = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
